--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Bootstrap CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--Bootstrap JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
     <!--Referencia CSS al proyecto-->
     <link rel="stylesheet" href="./style/style.css">
     <!--Typo-->
@@ -14,9 +21,9 @@
     <title>Home</title>
 </head>
 
-<body>
+<body id="bootstrap-overrides">
     <header>
-        <!--Menu Navegable. item "bicicletas" deberia desplazar hasta el id="bicicletas" dentro del index-->
+        <!--Menu Navegable - Sin Bootstrap-->
         <nav>
             <li id="fujiLogo">
                 <img src="./images/fuji_logo.png" alt="fuji_logo"></li>
@@ -33,16 +40,65 @@
                 </li>
             </ul>
         </nav>
+        <!--Menu Navegable - CON Bootstrap-->
+        <div class="btn-group menu__mobile">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Menu
+            </button>
+            <ul class="dropdown-menu">
+                <li>
+                    <a class="dropdown-item" href="#">
+                        Action
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#">
+                        Another action
+                    </a>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#">
+                        Something else here
+                    </a>
+                </li>
+            </ul>
+        </div>
+
     </header>
 
     <main>
-        <!--Bloque History-->
-        <section id="section__historia">
-            <img src="./images/fuji_history.jpg" alt="fuji_history">
+
+        <div id="carouselWithControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active carousel-one">
+                    <img src="./images/fuji_history.jpg" class="d-block w-100" alt="Slide 1">
+                </div>
+                <div class="carousel-item carousel-two">
+                    <img src="./images/fuji_history_1.jpg" class="d-block w-100" alt="Slide 2">
+                </div>
+                <div class="carousel-item carousel-three">
+                    <img src="./images/fuji_history_2.jpg" class="d-block w-100" alt="Slide 2">
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselWithControls" role="button" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselWithControls" role="button" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </a>
             <h2>
                 120 años de trayectoria desembarcan en Argentina.
             </h2>
+        </div>
 
+        <!--Bloque History
+        <section id="section__historia"></section>
+           <img src="./images/fuji_history.jpg" alt="fuji_history">
+            
+-->
         </section>
         <!--Bloque Bicicletas-->
         <section id="section__bicicletas">
