--- a/index.html
+++ b/index.html
@@ -5,20 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <!--Bootstrap JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+    <!--Iconos Bootstrap-->
+    <link href="./open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+
+
     <!--Referencia CSS al proyecto-->
     <link rel="stylesheet" href="./style/style.css">
+
     <!--Typo-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@700;800;900&display=swap" rel="stylesheet">
     <title>Home</title>
+
 </head>
 
 <body id="bootstrap-overrides">
@@ -26,40 +34,55 @@
         <!--Menu Navegable - Sin Bootstrap-->
         <nav>
             <li id="fujiLogo">
-                <img src="./images/fuji_logo.png" alt="fuji_logo"></li>
+                <img src="./images/fuji_logo.png" alt="fuji_logo">
+            </li>
 
             <ul class="menu__items">
 
                 <li class="nav__items">
-                    <a href="./pages/bicicletas.html">Bicicletas</a>
+                    <a href="./pages/bicicletas.html">
+                        Bicicletas
+                    </a>
                 </li>
                 <li class="nav__items">
-                    <a href="./pages/donde_comprar.html">Donde Comprar</a></li>
+                    <a href="./pages/donde_comprar.html">
+                        Donde Comprar
+
+                    </a></li>
                 <li class="nav__items">
-                    <a href="./pages/Contacto.html">Contacto</a>
+                    <a href="./pages/Contacto.html">
+                        Contacto
+                    </a>
                 </li>
             </ul>
         </nav>
         <!--Menu Navegable - CON Bootstrap-->
+
         <div class="btn-group menu__mobile">
-            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Menu
+            <button type="button" class="btn btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                <span class="oi oi-menu">
+
+                </span>
             </button>
             <ul class="dropdown-menu">
                 <li>
                     <a class="dropdown-item" href="#">
-                        Action
+                        Bicicletas
+                    </a>
+                    <ul> ACA PONER EL SUBMENU
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="dropdown-item" href="#">
+                        Donde comprar
                     </a>
                 </li>
                 <li>
                     <a class="dropdown-item" href="#">
-                        Another action
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" href="#">
-                        Something else here
+                        Contacto
                     </a>
                 </li>
             </ul>
@@ -101,6 +124,7 @@
 -->
         </section>
         <!--Bloque Bicicletas-->
+
         <section id="section__bicicletas">
 
             <div id="section__bicicletas--nevada" class="section__bicicletas">
