--- a/pages/nevada.html
+++ b/pages/nevada.html
@@ -5,34 +5,113 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!--Bootstrap CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!--Bootstrap JS-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
+    <!--Iconos Bootstrap-->
+    <link href="../open-iconic/font/css/open-iconic-bootstrap.css" rel="stylesheet">
+
+
     <!--Referencia CSS al proyecto-->
-    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/boot-style.css">
+
     <!--Typo-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@700;800;900&display=swap" rel="stylesheet">
     <title>Nevada</title>
+
 </head>
 
-<body>
+<body id="bootstrap-overrides">
     <header>
+        <!--Menu Navegable - Desktop-->
         <nav>
             <li id="fujiLogo">
-                <img src="../images/fuji_logo.png" alt="fuji_logo"></li>
-            <ul>
-
-                <li class="nav__items">
-                    <a href="../index.html">Home</a>
+                <img src="../images/fuji_logo.png" alt="fuji_logo">
+            </li>
+            <ul class="nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#bicicletas">bicicletas</a>
                 </li>
-                <li class="nav__items">
-                    <a href="./pages/donde_comprar.html">Donde Comprar</a></li>
-                <li class="nav__items">
-                    <a href="./pages/Contacto.html">Contacto</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">donde comprar</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">contacto</a>
                 </li>
             </ul>
+
+            <!--Menu Navegable - mobile-->
+
+            <div class="btn-group menu__mobile">
+                <button type="button" class="btn btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                    <span class="oi oi-menu">
+
+                    </span>
+                </button>
+                <ul class="dropdown-menu">
+                    <li>
+                        <a class="dropdown-item" href="../index.html">
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#">
+                            Donde comprar
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" href="#">
+                            Contacto
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </nav>
     </header>
-
+    <!--Cuerpo-->
+    <!--imagen principal -->
+    <div>
+        <div id="sectionNevada__principal">
+            <img src="../images/portada_nevada.jpg" alt="portada_Nevada" class="portada__nevada--img">
+            <p class="portada__nevada--titulo">
+                Nevada
+            </p>
+            <p class="portada__nevada--cuerpo">
+                La bicicleta de montaña recreativa perfecta para que los nuevos
+                ciclistas
+                se sumerjan en los senderos,
+                una solución para los desplazamientos o simplemente una bicicleta divertida para la ciudad o el
+                campo.
+                Un cuadro completamente nuevo con geometría actualizada para 2021, la Nevada garantiza comodidad y
+                confiabilidad, mientras que los soportes para el guardabarros trasero y el portapaquetes más un
+                soporte
+                de pie hacen de esta una verdadera máquina para todo.
+            </p>
+        </div>
+    </div>
+    <!--productos -->
+    <div class="container">
+        <div class="row">
+            <div class="col  col__productos">
+                <img src="../images/2021_fuji_nevada__29_15_bricked.jpg" alt="fuji_bricked">
+            </div>
+            <div class="col col__productos">
+                <img src="../images/2021_fuji_nevada__29_17_cyan.jpg" alt="fuji_cyan">
+            </div>
+            <div class="col col__productos">
+                <img src="../images/2021_fuji_nevada_29_19_satin_graphite_jp.jpg" alt="fuji_satin">
+            </div>
+        </div>
+    </div>
+    <!--
     <main id="grilla">
         <section id="sectionNevada__principal">
             <img src="../images/portada_nevada.jpg" alt="portada_Nevada" class="portada__nevada--img">
@@ -58,9 +137,9 @@
         </section>
 
     </main>
-
+-->
     <footer>
-        <!--RRSS Footer-->
+        <!--RRSS Footer
         <p>Seguinos en @FujiBikesAr</p>
         <ul>
             <li class="rrss">
@@ -92,7 +171,7 @@
             </fieldset>
         </form>
         <p class="footer__legales">Fuji Bikes Argentina 2022. Todos los derechos reservados</p>
-
+-->
     </footer>
 
 
