--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 
     <!--Referencia CSS al proyecto-->
-    <link rel="stylesheet" href="./style/boot-style.css">
+    <link rel="stylesheet" href="./css/main.css">
 
     <!--Typo-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,7 +53,6 @@
             <div class="btn-group menu__mobile">
                 <button type="button" class="btn btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                     <span class="oi oi-menu">
-
                     </span>
                 </button>
                 <ul class="dropdown-menu">
@@ -77,7 +76,7 @@
     </header>
 
     <main>
-
+        <!--Carrousel-->
         <div id="carouselWithControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active carousel-one">
