--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Posicionamiento seo-->
+    <meta name="keyword" content="bicicletas, bicicleta ruta, bicicleta carrera, bicicleta mtb, fuji, bikes, rutera">
+    <meta name="description" content="pagina oficial de bicicleta Fuji en Argentina">
 
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -77,13 +80,13 @@
         <div id="carouselWithControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active carousel-one">
-                    <img src="./images/fuji_history.jpg" class="d-block w-100" alt="Slide 1">
+                    <img src="./images/fuji_history.jpg" class="d-block w-100" alt="Bicicleta montaña">
                 </div>
                 <div class="carousel-item carousel-two">
-                    <img src="./images/fuji_history_1.jpg" class="d-block w-100" alt="Slide 2">
+                    <img src="./images/fuji_history_1.jpg" class="d-block w-100" alt="Casa historica Fuji">
                 </div>
                 <div class="carousel-item carousel-three">
-                    <img src="./images/fuji_history_2.jpg" class="d-block w-100" alt="Slide 2">
+                    <img src="./images/fuji_history_2.jpg" class="d-block w-100" alt="Campeones Fuji">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselWithControls" role="button" data-bs-slide="prev">
@@ -128,17 +131,17 @@
                 <p>Seguinos en @FujiBikesAr</p>
                 <ul>
                     <li class="rrss">
-                        <a href="https://www.facebook.com/fujibikesar">
+                        <a href="https://www.facebook.com/fujibikesar" target="_blank">
                             <img src="./images/facebook.png" alt="facebook">
                         </a>
                     </li>
                     <li class="rrss">
-                        <a href="https://www.instagram.com/fujibikesar/">
+                        <a href="https://www.instagram.com/fujibikesar/" target="_blank">
                             <img src="./images/instagram.png" alt="instagram">
                         </a>
                     </li>
                     <li class="rrss">
-                        <a href="https://www.youtube.com/channel/UCZvG3epI1XFAD7zqVtMU66w">
+                        <a href="https://www.youtube.com/channel/UCZvG3epI1XFAD7zqVtMU66w" target="_blank">
                             <img src="./images/youtube.png" alt="youtube">
                         </a>
                     </li>
