--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Posicionamiento seo-->
+    <meta name="keyword"
+        content="bicicletas, bicicleta ruta, bicicleta carrera, bicicleta mtb, fuji, bikes, rutera, contacto">
+    <meta name="description" content="Contacta con Fuji bicicletas Argentina">
+
 
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -79,6 +84,7 @@
     </header>
     <main>
         <!--Form de contacto con todos los campos obligatorios-->
+        <h1>Contactanos</h1>
         <form class="main__form-Contacto">
             <fieldset class="form__fieldset">
                 <legend>Mandanos tu consulta</legend>
@@ -112,17 +118,17 @@
                 <p>Seguinos en @FujiBikesAr</p>
                 <ul>
                     <li class="rrss">
-                        <a href="https://www.facebook.com/fujibikesar">
+                        <a href="https://www.facebook.com/fujibikesar" target="_blank">
                             <img src="../images/facebook.png" alt="facebook">
                         </a>
                     </li>
                     <li class="rrss">
-                        <a href="https://www.instagram.com/fujibikesar/">
+                        <a href="https://www.instagram.com/fujibikesar/" target="_blank">
                             <img src="../images/instagram.png" alt="instagram">
                         </a>
                     </li>
                     <li class="rrss">
-                        <a href="https://www.youtube.com/channel/UCZvG3epI1XFAD7zqVtMU66w">
+                        <a href="https://www.youtube.com/channel/UCZvG3epI1XFAD7zqVtMU66w" target="_blank">
                             <img src="../images/youtube.png" alt="youtube">
                         </a>
                     </li>
