--- a/pages/donde_comprar.html
+++ b/pages/donde_comprar.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Posicionamiento seo-->
+    <meta name="keyword"
+        content="bicicletas, bicicleta ruta, bicicleta carrera, bicicleta mtb, fuji, bikes, rutera, locales, donde comprar, tiendas, bicicletarias">
+    <meta name="description" content="Encontra donde comparar tu bicicleta Fuji en Argentina">
+
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -75,10 +80,10 @@
         </nav>
     </header>
     <main>
-        <div class="mapa__botones-titulo">
-            <p>
-                Buscá el local en tu provincia
-            </p>
+        <div>
+
+            <h1 class="mapa__botones-titulo"> Buscá el local en tu provincia</h1>
+
         </div>
         <div class="mapa__botones">
             <div class="mapa__botones--provincias">
@@ -200,17 +205,17 @@
                 <p>Seguinos en @FujiBikesAr</p>
                 <ul>
                     <li class="rrss">
-                        <a href="https://www.facebook.com/fujibikesar">
+                        <a href="https://www.facebook.com/fujibikesar" target="_blank">
                             <img src="../images/facebook.png" alt="facebook">
                         </a>
                     </li>
                     <li class="rrss">
-                        <a href="https://www.instagram.com/fujibikesar/">
+                        <a href="https://www.instagram.com/fujibikesar/" target="_blank">
                             <img src="../images/instagram.png" alt="instagram">
                         </a>
                     </li>
                     <li class="rrss">
-                        <a href="https://www.youtube.com/channel/UCZvG3epI1XFAD7zqVtMU66w">
+                        <a href="https://www.youtube.com/channel/UCZvG3epI1XFAD7zqVtMU66w" target="_blank">
                             <img src="../images/youtube.png" alt="youtube">
                         </a>
                     </li>
