--- a/pages/nevada.html
+++ b/pages/nevada.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Posicionamiento seo-->
+    <meta name="keyword"
+        content="bicicletas, bicicleta ruta, bicicleta carrera, bicicleta mtb, fuji, bikes, rutera, nevada">
+    <meta name="description" content="todos los modelos de la bicicleta Fuji Nevada disponibles en Argentina">
+
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -72,10 +77,10 @@
     <!--imagen principal -->
     <div>
         <div id="section__principal">
-            <img src="../images/portada_nevada.jpg" alt="portada_Nevada" class="portada__img">
-            <p class="portada__titulo">
+            <img src="../images/portada_nevada.jpg" alt="Portada de la bicicleta Nevada" class="portada__img">
+            <h1 class="portada__titulo">
                 Nevada
-            </p>
+            </h1>
             <p class="portada__cuerpo">
                 La bicicleta de montaña recreativa perfecta para que los nuevos
                 ciclistas
@@ -121,17 +126,17 @@
                 </p>
                 <ul>
                     <li class="rrss">
-                        <a href="https://www.facebook.com/fujibikesar">
+                        <a href="https://www.facebook.com/fujibikesar" target="_blank">
                             <img src="../images/facebook.png" alt="facebook">
                         </a>
                     </li>
                     <li class="rrss">
-                        <a href="https://www.instagram.com/fujibikesar/">
+                        <a href="https://www.instagram.com/fujibikesar/" target="_blank">
                             <img src="../images/instagram.png" alt="instagram">
                         </a>
                     </li>
                     <li class="rrss">
-                        <a href="https://www.youtube.com/channel/UCZvG3epI1XFAD7zqVtMU66w">
+                        <a href="https://www.youtube.com/channel/UCZvG3epI1XFAD7zqVtMU66w" target="_blank">
                             <img src="../images/youtube.png" alt="youtube">
                         </a>
                     </li>
