--- a/pages/slm.html
+++ b/pages/slm.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Posicionamiento seo-->
+    <meta name="keyword"
+        content="bicicletas, bicicleta ruta, bicicleta carrera, bicicleta mtb, fuji, bikes, rutera, slm">
+    <meta name="description" content="todos los modelos de la bicicleta Fuji SLM disponibles en Argentina">
+
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -78,10 +83,10 @@
     <!--imagen principal -->
     <div>
         <div id="section__principal">
-            <img src="../images/portada_slm.webp" alt="portada_slm" class="portada__img">
-            <p class="portada__titulo">
+            <img src="../images/portada_slm.jpg" alt="portada_slm" class="portada__img">
+            <h1 class="portada__titulo">
                 SLM
-            </p>
+            </h1>
             <p class="portada__cuerpo">
                 Ciclistas incondicionales de cross country y de resistencia que necesitan un rendimiento óptimo para las
                 carreras y el entrenamiento o para superar el límite de la velocidad y la distancia en terrenos
@@ -113,17 +118,17 @@
                 <p>Seguinos en @FujiBikesAr</p>
                 <ul>
                     <li class="rrss">
-                        <a href="https://www.facebook.com/fujibikesar">
+                        <a href="https://www.facebook.com/fujibikesar" target="_blank">
                             <img src="../images/facebook.png" alt="facebook">
                         </a>
                     </li>
                     <li class="rrss">
-                        <a href="https://www.instagram.com/fujibikesar/">
+                        <a href="https://www.instagram.com/fujibikesar/" target="_blank">
                             <img src="../images/instagram.png" alt="instagram">
                         </a>
                     </li>
                     <li class="rrss">
-                        <a href="https://www.youtube.com/channel/UCZvG3epI1XFAD7zqVtMU66w">
+                        <a href="https://www.youtube.com/channel/UCZvG3epI1XFAD7zqVtMU66w" target="_blank">
                             <img src="../images/youtube.png" alt="youtube">
                         </a>
                     </li>
@@ -144,5 +149,6 @@
         </div>
     </footer>
 </body>
+
 
 </html>
