--- a/pages/transonic.html
+++ b/pages/transonic.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Posicionamiento seo-->
+    <meta name="keyword"
+        content="bicicletas, bicicleta ruta, bicicleta carrera, bicicleta mtb, fuji, bikes, rutera, transonic">
+    <meta name="description" content="todos los modelos de la bicicleta Fuji transonic disponibles en Argentina">
+
     <!--Bootstrap CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -79,9 +84,10 @@
     <div>
         <div id="section__principal">
             <img src="../images/portada_transonic.jpg" alt="portada_transonic" class="portada__img">
-            <p class="portada__titulo">
+
+            <h1 class="portada__titulo">
                 Transonic
-            </p>
+            </h1>
             <p class="portada__cuerpo">
                 Cómo se puede mejorar aún más una gran bicicleta aerodinámica? Adaptando el revolucionario diseño lineal
                 revelado en el gran éxito de la Supreme para mujer al nuevo buque insignia de velocidad de Fuji.
@@ -119,17 +125,17 @@
                 <p>Seguinos en @FujiBikesAr</p>
                 <ul>
                     <li class="rrss">
-                        <a href="https://www.facebook.com/fujibikesar">
+                        <a href="https://www.facebook.com/fujibikesar" target="_blank">
                             <img src="../images/facebook.png" alt="facebook">
                         </a>
                     </li>
                     <li class="rrss">
-                        <a href="https://www.instagram.com/fujibikesar/">
+                        <a href="https://www.instagram.com/fujibikesar/" target="_blank">
                             <img src="../images/instagram.png" alt="instagram">
                         </a>
                     </li>
                     <li class="rrss">
-                        <a href="https://www.youtube.com/channel/UCZvG3epI1XFAD7zqVtMU66w">
+                        <a href="https://www.youtube.com/channel/UCZvG3epI1XFAD7zqVtMU66w" target="_blank">
                             <img src="../images/youtube.png" alt="youtube">
                         </a>
                     </li>
