entrega final del proyecto

--- a/pages/nevada.html
+++ b/pages/nevada.html
@@ -75,7 +75,7 @@
     </header>
     <!--Cuerpo-->
     <!--imagen principal -->
-    <div>
+    <div id="grilla">
         <div id="section__principal">
             <img src="../images/portada_nevada.jpg" alt="Portada de la bicicleta Nevada" class="portada__img">
             <h1 class="portada__titulo">
@@ -93,30 +93,27 @@
                 de pie hacen de esta una verdadera máquina para todo.
             </p>
         </div>
-    </div>
-    <!--productos -->
-    <div class="container">
-        <div class="row row__bicicletas">
-            <div class="col  col__productos">
-                <img src="../images/2021_fuji_nevada__29_15_bricked.jpg" alt="fuji_bricked">
-                <p>
-                    Nevada 1.3
-                </p>
-            </div>
-            <div class="col col__productos">
-                <img src="../images/2021_fuji_nevada__29_17_cyan.jpg" alt="fuji_cyan">
-                <p>
-                    Nevada 1.5
-                </p>
-            </div>
-            <div class="col col__productos">
-                <img src="../images/2021_fuji_nevada_29_19_satin_graphite_jp.jpg" alt="fuji_satin">
-                <p>
-                    Nevada 1.7
-                </p>
-            </div>
+        <!--productos -->
+        <div class="col  col__productos_uno bicicleta">
+            <img src="../images/2021_fuji_nevada__29_15_bricked.jpg" alt="fuji_bricked">
+            <p>
+                Nevada 1.3
+            </p>
+        </div>
+        <div class="col col__productos__dos bicicleta">
+            <img src="../images/2021_fuji_nevada__29_17_cyan.jpg" alt="fuji_cyan">
+            <p>
+                Nevada 1.5
+            </p>
+        </div>
+        <div class="col col__productos__tres bicicleta">
+            <img src="../images/2021_fuji_nevada_29_19_satin_graphite_jp.jpg" alt="fuji_satin">
+            <p>
+                Nevada 1.7
+            </p>
         </div>
     </div>
+
     <footer>
         <!--RRSS Footer-->
         <div class="contenedor__rrssForm">
