--- a/pages/slm.html
+++ b/pages/slm.html
@@ -81,7 +81,7 @@
     </header>
     <!--Cuerpo-->
     <!--imagen principal -->
-    <div>
+    <div id="grilla__slm">
         <div id="section__principal">
             <img src="../images/portada_slm.jpg" alt="portada_slm" class="portada__img">
             <h1 class="portada__titulo">
@@ -93,22 +93,19 @@
                 técnicos, especialmente aquellos que prefieren el peso ligero y la eficiencia de una bicicleta rígida.
             </p>
         </div>
-    </div>
-    <!--productos -->
-    <div class="container">
-        <div class="row row__bicicletas">
-            <div class="col  col__productos">
-                <img src="../images/2021_fuji_slm_29_25_armygreen.webp" alt="fuji_bricked">
-                <p>
-                    SLM 2.5
-                </p>
-            </div>
-            <div class="col col__productos">
-                <img src="../images/2021_fuji_slm_29_27_coolgray.webp" alt="fuji_cyan">
-                <p>
-                    SLM 2.7
-                </p>
-            </div>
+
+        <!--productos -->
+        <div class="col  col__productos__uno bicicleta">
+            <img src="../images/2021_fuji_slm_29_25_armygreen.jpg" alt="fuji_bricked">
+            <p>
+                SLM 2.5
+            </p>
+        </div>
+        <div class="col col__productos__dos bicicleta">
+            <img src="../images/2021_fuji_slm_29_27_coolgray.jpg" alt="fuji_cyan">
+            <p>
+                SLM 2.7
+            </p>
         </div>
     </div>
     <footer>
