--- a/pages/transonic.html
+++ b/pages/transonic.html
@@ -81,7 +81,7 @@
     </header>
     <!--Cuerpo-->
     <!--imagen principal -->
-    <div>
+    <div id="grilla">
         <div id="section__principal">
             <img src="../images/portada_transonic.jpg" alt="portada_transonic" class="portada__img">
 
@@ -94,28 +94,25 @@
                 Transonic: es una nueva definición de velocidad.
             </p>
         </div>
-    </div>
-    <!--productos -->
-    <div class="container">
-        <div class="row row__bicicletas">
-            <!--  <div class="col  col__productos">
-                <img src="../images/fuji_transonic_105.jpg" alt="fuji_bricked">
-                <p>
-                    Transonic 2.1 Di2
-                </p>
-            </div> -->
-            <div class="col col__productos">
-                <img src="../images/fuji_transonic_di2.jpg" alt="fuji_cyan">
-                <p>
-                    Transonic 2.1 R80
-                </p>
-            </div>
-            <div class="col col__productos">
-                <img src="../images/fuji_transonic_r8000.jpg" alt="fuji_satin">
-                <p>
-                    Transonic 2.1 R70
-                </p>
-            </div>
+
+        <!--productos -->
+        <div class="col  col__productos_uno bicicleta">
+            <img src="../images/fuji_transonic_105.jpg" alt="fuji_bricked">
+            <p>
+                Transonic 2.1 Di2
+            </p>
+        </div>
+        <div class="col col__productos__dos bicicleta">
+            <img src="../images/fuji_transonic_di2.jpg" alt="fuji_cyan">
+            <p>
+                Transonic 2.1 R80
+            </p>
+        </div>
+        <div class="col col__productos__tres bicicleta">
+            <img src="../images/fuji_transonic_r8000.jpg" alt="fuji_satin">
+            <p>
+                Transonic 2.1 R70
+            </p>
         </div>
     </div>
     <footer>
